// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconNavigateRight should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-navigate-right "
  focusable="false"
  height={48}
  viewBox="0 0 48 48"
  width={48}
>
  <path
    d="M17.2,14.8l9.2,9.2l-9.2,9.2L20,36l12-12L20,12L17.2,14.8z"
    fill="#494949"
    stroke="#DCDCDC"
    strokeMiterlimit="10"
  />
  <path
    d="M48,48H0L0,0l48,0V48z"
    display="none"
    fill="none"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconNavigateRight should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-navigate-right test"
  focusable="false"
  height={100}
  title="title"
  viewBox="0 0 48 48"
  width={200}
>
  <path
    d="M17.2,14.8l9.2,9.2l-9.2,9.2L20,36l12-12L20,12L17.2,14.8z"
    fill="#494949"
    stroke="#DCDCDC"
    strokeMiterlimit="10"
  />
  <path
    d="M48,48H0L0,0l48,0V48z"
    display="none"
    fill="none"
  />
</AccessibleSVG>
`;
